ダウンロード機能付加

--- a/astro_pages/src/components/serial_api.astro
+++ b/astro_pages/src/components/serial_api.astro
@@ -394,6 +394,22 @@
 
 				// シリアル通信でバイナリ送信
 				await flash_firmware(firm_bytes);
+
+				// ファイルをダウンロード
+				function click_download(url: string) {
+					const a = document.createElement('a');
+					document.body.appendChild(a); // Firefox対応
+					a.href = url;
+					a.download = 'firmware.bin'; // ダウンロードするファイル名
+					a.click(); // 自動的にダウンロードを開始
+				}
+
+				// MIMEタイプを指定し、bytesからBlobを作成
+				const blob = new Blob([firm_bytes], { type: 'application/octet-stream' });
+				const url = URL.createObjectURL(blob);
+
+				click_download(url);
+				URL.revokeObjectURL(url);
 				
 			} catch (e) {
 				console.error(e);
